--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "babel-runtime": "^6.0.0",
     "node-sass": "^3.8.0",
     "nprogress": "^0.2.0",
+    "react-cookie": "^0.4.8",
     "style-loader": "^0.13.1",
+    "sass-loader": "^4.0.0", 
     "sweetalert": "^1.1.3",
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
@@ -25,7 +27,9 @@
     "vue-toast": "^2.0.2",
     "vue-validator": "^2.1.6",
     "vuex": "^0.8.2",
-    "vuex-router-sync": "^2.1.0"
+    "vuex-router-sync": "^2.1.0",
+    "screenfull": "^3.0.2",
+    "perfect-scrollbar": "^0.6.10"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
